testdata/good/before/each-and-comp/views/index.tw
<ul>@each(name in names)@component("components/person", { name })@end@end</ul>