testdata/bad/unknown-named-provide/index.tw
@component("user", { name: "Anna" })
    @provide("unknown")
        <p>Some content</p>
    @end
@end
